--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jbdc:mysql://localhost:3306/LocalTeste
+spring.datasource.url=jbdc:mysql://localhost:3306/BancoTeste
 spring.datasource.username=root
 spring.datasource.password=M@rcospitty9
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
